<resources>
    <string name="app_name">RateYourPlace</string>
    <string name="welcome_to_rate_my_place">Welcome to Rate My Place</string>
    <string name="welcome_to_rate_your_place">Welcome to Rate Your Place</string>
    <string name="welcome_n_to_n_rate_your_place">Welcome \n to \n Rate Your Place</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_an_account1">Create an account</string>
    <string name="location">Location:</string>
    <string name="property_conditions">Property conditions:</string>
    <string name="safety">Safety:</string>
    <string name="landlord">Landlord:</string>
    <string name="additional_comments">Additional comments:</string>
    <string name="submit">submit</string>
    <string name="plus">+</string>
    <string name="main_property_image">Main Property Image</string>
    <string name="search_by_address">Search by address:</string>
    <string name="close_to_you">Close to you:</string>
    <string name="title_activity_maps_search">mapsSearch</string>
    <string name="profile_picture">profile picture</string>
    <string name="change_password">Change password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign out</string>
    <string name="your_account">Your account</string>
    <string name="old_password">Old password</string>
    <string name="insert_old_password">Insert old password</string>
    <string name="new_password">New password</string>
    <string name="insert_new_password">Insert new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="search_by_map_view">search by map view</string>
    <string name="add_property">Add property</string>
    <string name="search_your_saved_properties">Search your saved properties</string>
    <string name="list_view">List view</string>
    <string name="add_pictures">Add Pictures</string>
    <string name="welcome">Welcome</string>
    <string name="manage_your_account">Manage your account</string>
    <string name="settings">Settings</string>
    <string name="see_past_reviews">See past reviews</string>
    <string name="past_reviews">Past reviews</string>
    <string name="back_button">back button</string>
    <string name="notification">Notification</string>
    <string name="current_location">Current location</string>
    <string name="high_contrast">High contrast</string>
    <string name="delete_account">Delete account</string>
    <string name="deleteAccountMsg">This action will permanently \n delete your account \n Do you want to proceed?</string>
    <string name="map_button">map button</string>
    <string name="reviews">Reviews:</string>
    <string name="saved_button">saved button</string>
    <string name="add_images">Add Images</string>
    <string name="property_image">Property Image</string>
    <string name="address">Address</string>
    <string name="find_address_in_maps">Find address in Maps</string>
    <string name="insert_address">Insert address</string>
    <string name="search">Search</string>
    <string name="properties">Properties:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_in_maps">Search in maps</string>
    <string name="pick_address">Pick address</string>
</resources>