<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/oldPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/old_password"
        android:textSize="20sp"
        android:textColor="@color/pink"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:inputType="textPassword"
        android:hint="@string/insert_old_password"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/newPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/new_password"
        android:textSize="20sp"
        android:textColor="@color/pink"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:inputType="textPassword"
        android:hint="@string/insert_new_password"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/confirmPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/confirm_password"
        android:textSize="20sp"
        android:textColor="@color/pink"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

</LinearLayout>