<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/location"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <RatingBar
        android:id="@+id/ratingLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/property_conditions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/ratingConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/safety"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/ratingSafety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/landlord"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/ratingLandlord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1.0"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/additional_comments"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:labelFor="@+id/editTextTextMultiLine"/>

    <EditText
        android:id="@+id/comments"
        android:layout_width="340dp"
        android:layout_height="65dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_marginBottom="10dp"
        tools:ignore="Autofill" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewImages"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

</LinearLayout>